fix: adjust body transform for improved vertical alignment

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -760,7 +760,7 @@ body {
   line-height: 1;
   margin: 0;
   padding: 0;
-  transform: translate(-50%, -50%);
+  transform: translate(-50%, -54%);
 }
 
 .hero-icon--calendrier {
